# zeron

./: .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
core/apps/blog/: admin.py  cron.py  forms.py  models.py  signals.py  sitemaps.py  urls.py  views.py
core/apps/blog/managment/commands/: refresh_sitemap.py
core/core/: settings.py  urls.py
core/templates/: base.html
core/templates/blog/: category_detail.html  category_list.html  donate.html  index.html  post_detail.html  success.html
